# KDebugger

./: .gitignore  CMakeLists.txt  README.md  cat  vcpkg.json
include/libkdebugger/: .process.hpp.swp  bit.hpp  breakpoint_site.hpp  dwarf.hpp  elf.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_collection.hpp  types.hpp  watchpoint.hpp
include/libkdebugger/detail/: registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  disassembler.cpp  dwarf.cpp  elf.cpp  pipe.cpp  process.cpp  registers.cpp  watchpoint.cpp
src/include/: syscalls.inc
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  hello_kdebugger.cpp  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  kdebugger.cpp
